Added logic for login and registration

--- a/BookMySpotAPI/appsettings.json
+++ b/BookMySpotAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "db1": "Server=PIVCIC; Database=BookMySpot; Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "db1": "Server=localhost; Database=BookMySpot; Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
