--- a/BookMySpotAPI/BookMySpotAPI.csproj
+++ b/BookMySpotAPI/BookMySpotAPI.csproj
@@ -16,7 +16,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0" />
+    <PackageReference Include="SkiaSharp" Version="2.88.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Slike\" />
   </ItemGroup>
 
 </Project>
