--- a/angularApp/package.json
+++ b/angularApp/package.json
@@ -15,9 +15,12 @@
     "@angular/compiler": "^18.1.4",
     "@angular/core": "^18.1.4",
     "@angular/forms": "^18.1.4",
+    "@angular/google-maps": "^18.2.1",
     "@angular/platform-browser": "^18.1.4",
     "@angular/platform-browser-dynamic": "^18.1.4",
     "@angular/router": "^18.1.4",
+    "@types/google.maps": "^3.55.12",
+    "@types/googlemaps": "^3.43.3",
     "date-fns": "^3.6.0",
     "ngx-markdown": "^18.0.0",
     "rxjs": "~7.8.0",
