Onemogućavanje da Google Maps API ključ bude javno dostupan

--- a/BookMySpotAPI/appsettings.json
+++ b/BookMySpotAPI/appsettings.json
@@ -8,6 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleMaps": {
+    "ApiKey": "AIzaSyB1b7A8pDIHL4r0PxZ4lpQWw0GQJajG_l0"
+  },
   "AllowedHosts": "*"
 
 }
