Sakrivanje API ključa

--- a/BookMySpotAPI/appsettings.json
+++ b/BookMySpotAPI/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "GoogleMaps": {
-    "ApiKey": "AIzaSyB1b7A8pDIHL4r0PxZ4lpQWw0GQJajG_l0"
+    "ApiKey": ""
   },
   "AllowedHosts": "*"
 
