--- a/BookMySpotAPI/appsettings.json
+++ b/BookMySpotAPI/appsettings.json
@@ -8,6 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 
+  "SendGrid": {
+    "ApiKey": "key"
+  }
 }
